--- a/note/static/css/sinupstyle.css
+++ b/note/static/css/sinupstyle.css
@@ -31,7 +31,7 @@ body{
     align-items:center;
     
 }
-    /* @keyframes gradient {
+    @keyframes gradient {
         0% {
             background-position: 0% 50%;
         }
@@ -41,7 +41,7 @@ body{
         100% {
             background-position: 0% 50%;
         }
-    } */
+    }
 .center {
     display: flex;
     flex-direction:column;
