--- a/note/templates/login.html
+++ b/note/templates/login.html
@@ -7,12 +7,13 @@
     <title>login</title>
 </head>
 <body>
-    <form action="">
+    <form action="" method="post">
         {{ login.email.label("email Id") }}
         {{ login.email() }}
         <br>
         {{ login.password.label() }}
         {{ login.password() }}
+        {{ login.submit }}
     </form>
 </body>
 </html>
