--- a/note/templates/login.html
+++ b/note/templates/login.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>login</title>
 </head>
+
 <body>
     <form action="" method="post">
+        {{ login.csrf_token }}
         {{ login.email.label("email Id") }}
         {{ login.email() }}
         <br>
@@ -16,4 +19,5 @@
         {{ login.submit }}
     </form>
 </body>
+
 </html>
