--- a/note/templates/signup.html
+++ b/note/templates/signup.html
@@ -38,7 +38,7 @@
         <div class="submitcontainer">
             {{ form.submit(class="submitbtn") }}
         </div>
-
+        <div class="upperbordersigup"></div>
         <a href="#">Already have an account?</a>
     </form>
 
