--- a/note/templates/login.html
+++ b/note/templates/login.html
@@ -1,23 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../static/css/sinupstyle.css">
     <title>login</title>
 </head>
-
 <body>
-    <form action="" method="post">
-        {{ login.csrf_token }}
-        {{ login.email.label("email Id") }}
-        {{ login.email() }}
-        <br>
-        {{ login.password.label() }}
-        {{ login.password() }}
-        {{ login.submit }}
+    
+   
+    <div class="opacityboxlogin flexbotom">
+        
+    </div>
+    <form action="" method="post" class="center box"">
+        <div class="flexC">
+            {{ login.email.label("ENTER YOUR EMAIL :",class=" placeholder") }}
+            {{ login.email(class="label") }}
+        </div>
+      
+        <div class="flexC">
+            {{ login.password.label("ENTER PASSWORD",class=" placeholder") }}
+            {{ login.password(class="label") }}
+        </div>
+        <div class="submitcontainer">
+            {{ login.submit(class="submitbtn" ) }}
+        </div>
+        <!-- <div class="upperborder">
+            <div class="forgotpass equalspace">
+                <a href="#">forgot password</a>
+            </div>
+            <div class="divider">
+    
+            </div>
+            <div class="signup equalspace">
+                <a href="#">Sign UP</a>
+            </div>
+        </div> -->
+       
     </form>
-</body>
+    <div class="upperborder">
+        <div class="forgotpass equalspace">
+            <a href="#">forgot password</a>
+        </div>
+        <div class="divider">
 
+        </div>
+        <div class="signup equalspace">
+            <a href="#">Sign UP</a>
+        </div>
+    </div>
+   
+</body>
 </html>
