minor css changes

--- a/note/static/css/sinupstyle.css
+++ b/note/static/css/sinupstyle.css
@@ -54,7 +54,7 @@ body{
     width: 400px;
     background-color:var(--secondary-color);
     opacity: 0.4;
-    height:75vh;
+    height:600px;
     border-radius: 15px;
   
 }
