database replaced to sql

--- a/note/templates/index.html
+++ b/note/templates/index.html
@@ -14,7 +14,7 @@
         <div class="popup">
             <div class="content">
                 <header>
-                    <p>Add a new note</p>
+                    <p>Add a new note {{ name }}</p>
                     <i class="fa-solid fa-xmark"></i>
                 </header>
                 <form action="#">
